# Game-Engine

./: CMakeLists.txt  Texture.h  YeOlBackup.txt  glad.c  input_manager.cpp  input_manager.h  main.cpp  stb_image.cpp  stb_image.h
gameEngine/: ComplexPool.cpp  ComplexPool.h  Component.cpp  Component.h  Entity.cpp  Entity.h  GameManager.cpp  GameManager.h  HitboxData.cpp  HitboxData.h  InputManager.cpp  InputManager.h  ObjectPool.cpp  ObjectPool.h  RenderManager.cpp  RenderManager.h  Shader.cpp  Shader.h  ShaderCollection.cpp  ShaderCollection.h  SoundManager.cpp  SoundManager.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  VectorMethods.cpp  VectorMethods.h  Window.cpp  Window.h  inputManager.cpp  vector2.cpp  vector2.h
gameEngine/Components/: CameraControl.cpp  CameraControl.h  HitboxComponent.cpp  HitboxComponent.h  PlayerControl.cpp  PlayerControl.h  RenderComponent.cpp  RenderComponent.h  Spin.cpp  Spin.h
glfw-3.3.9/docs/: Doxyfile.in  window.dox
glfw-3.3.9/docs/html/: window_guide.html
glfw-3.3.9/oldBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
glfw-3.3.9/oldBuild/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
glfw-3.3.9/oldBuild/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  update_mappings.vcxproj  update_mappings.vcxproj.filters
glfw-3.3.9/oldBuild/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cmake_install.cmake  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  inputlag.vcxproj  inputlag.vcxproj.filters  joysticks.vcxproj  joysticks.vcxproj.filters  monitors.vcxproj  monitors.vcxproj.filters  msaa.vcxproj  (+17 more)
include/STB/: stb_image.h
include/glad/: glad.h
(+131 files in other folders)
